appId: com.janechun.animalcrossingtradingapp
---
# 3. 채팅방에서 메시지 주고받기 테스트

# A 유저가 첫 번째 메시지 전송
- tapOn:
    label: '채팅 입력창 클릭'
    id: 'chatInput'
- inputText:
    label: 'A 유저 첫 번째 메시지 입력'
    text: '안녕하세요'
- tapOn:
    label: '메시지 전송 버튼 클릭'
    id: 'submitChatButton'

# 메시지 전송 확인
- assertVisible:
    label: 'A 유저 메시지 전송 확인'
    text: '안녕하세요'

# B 유저 채팅 응답 대기
- extendedWaitUntil:
    label: '🕐 B 유저가 실제 모바일 기기로 채팅방에서 "안녕하세요" 메시지를 보낼 때까지 최대 60초 대기'
    visible: '안녕하세요'
    timeout: 60000

# A 유저가 마지막 메시지 전송
- tapOn:
    label: '채팅 입력창 클릭'
    id: 'chatInput'
- inputText:
    label: 'A 유저 메시지 입력'
    text: '제 섬으로 와주세요. M2EOQ 입니다.'
- tapOn:
    label: '메시지 전송 버튼 클릭'
    id: 'submitChatButton'

- tapOn:
    label: '채팅 입력창 클릭'
    id: 'chatInput'
- inputText:
    label: 'A 유저 마지막 메시지 입력'
    text: '거래 감사합니다'
- tapOn:
    label: '메시지 전송 버튼 클릭'
    id: 'submitChatButton'

# 메시지 전송 확인
- assertVisible:
    label: 'A 유저 마지막 메시지 전송 확인'
    text: '거래 감사합니다'
